--- a/04-Box-Model/Unsolved/assets/css/style.css
+++ b/04-Box-Model/Unsolved/assets/css/style.css
@@ -9,7 +9,13 @@ img {
   width: 200px;
   height: 200px;
   background-color: lightblue;
+
   /* TODO: Add a margin property */
+  margin: 27px;
   /* TODO: Add a padding property */
+  padding: 12px;
   /* TODO: Add a border property */
+  border-color: blue;
+  border-width: 8px;
+  border-style: solid;
 }
